[editor styles] Add image alignment spacing & set the correct font size for body text

--- a/src/assets/editor-style.less
+++ b/src/assets/editor-style.less
@@ -19,4 +19,25 @@ body {
 	margin-right: auto;
 	padding: 20px;
 	max-width: 660px;
+	.font-size(17);
+}
+
+.wp-caption {
+	border: 1px solid #eee !important;
+	margin-bottom: @spacing !important;
+	padding: 5px 5px 0 !important;
+	max-width: 100% !important;
+
+	.wp-caption-dd {
+		margin: 0.8075em 0;
+		font-style: italic !important;
+	}
+}
+
+.alignleft {
+	margin-right: 1.5em !important;
+}
+
+.alignright {
+	margin-left: 1.5em !important;
 }
